# quicksketch

./: .gitignore  CLAUDE.md  README.md  eslintrc.json  package-lock.json  package.json  pyproject.toml
src/quicksketch/: quicksketch.py
src/quicksketch/static/: script.js  style.css
src/quicksketch/templates/: index.html
