[project]
name = "quicksketch"
version = "0.1.0"
description = "A web-server for timed sketching."
authors = [
    {name = "Supra-Lice", email = "supralice@proton.me"},
]
dependencies = ["flask>=3.1.0", "gunicorn>=23.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
quicksketch = "quicksketch.quicksketch:main"

[tool.setuptools]
include-package-data = true

[tool.pdm]
distribution = true

[tool.pdm.scripts]
quicksketch = "python src/quicksketch/quicksketch.py"

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "black>=25.1.0",
    "pytest>=8.3.5",
]
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | dist
)/
'''
